feat(account): 提供账户账本内核联调接口
